# REPTICONTROL

./: CMakeLists.txt  README.md  idf_component.yml  package-lock.json  package.json  sdkconfig
main/: CMakeLists.txt  app_main.c  app_main.h  main.c  pin_mapping.h
main/core/: climate_controller.c  climate_controller.h  data_simulator.c  data_simulator.h  event_logger.c  event_logger.h  mqtt_manager.c  mqtt_manager.h  network_manager.c  network_manager.h  ota_manager.c  ota_manager.h  power_manager.c  power_manager.h  settings_manager.c  settings_manager.h  system_monitor.c  system_monitor.h  watchdog_manager.c  watchdog_manager.h
main/drivers/: display_config.c  display_config.h  display_driver.c  display_driver.h  touch_driver.c  touch_driver.h
main/ui/: lv_conf.h  ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_timer.c  ui_timer.h
main/ui/screens/: ui_climate.c  ui_climate.h  ui_dashboard.c  ui_dashboard.h  ui_first_setup.c  ui_first_setup.h  ui_logs.c  ui_logs.h  ui_schedule.c  ui_schedule.h  ui_system.c  ui_system.h
main/utils/: animations.c  animations.h  rtc_manager.c  rtc_manager.h
test/: CMakeLists.txt  test_climate_controller.c  test_data_simulator.c  test_settings_manager.c
